tests/expectations/compiler/bugs/unknown_variable_fail.out
Error [ETYC0372005]: Unknown variable `caller`
    --> compiler-test:36:44
     |
  36 |         return (self.caller, finalize_init(caller));
     |                                            ^^^^^^
Error [ETYC0372088]: An `async` transition must contain at least one async operation — either a call to an `async` function or an `async` block.
    --> compiler-test:35:5
     |
  35 |     async transition init(b: bool) -> (address, Future) {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  36 |         return (self.caller, finalize_init(caller));
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  37 |     }
     |     ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:53:53
     |
  53 |         let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |                                                     ^^^^^^^
Error [ETYC0372005]: Unknown variable `account`
    --> compiler-test:55:22
     |
  55 |         Mapping::set(account, caller, owner_amount + admin_token_amt);
     |                      ^^^^^^^
Warning [WTYC0372002]: The async function `finalize_init` is never called by an async transition.
    --> compiler-test:39:5
     |
  39 |     async function finalize_init(caller: address) {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  40 |         let gs: GlobalState = Mapping::get_or_use(global_state, true, GlobalState {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  41 |             next_token_id: 0field,
     |             ^^^^^^^^^^^^^^^^^^^^^^
  42 |             admin: aleo1az8p9vlllyqwtj0c2g9svkd0e5v0p3zzdflwwrpa7kpe8xrfxgfqqpru7m,
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  43 |         });
     |         ^^^
  44 |         assert_eq(gs.next_token_id, 0field);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  45 |         assert_eq(caller, gs.admin);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  46 |         Mapping::set(global_state, true, GlobalState {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  47 |             next_token_id: 1field,
     |             ^^^^^^^^^^^^^^^^^^^^^^
  48 |             admin: gs.admin,
     |             ^^^^^^^^^^^^^^^^
  49 |         });
     |         ^^^
  50 | 
  51 |         let test_supply: u64 = 15000000000000u64;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  52 |         let admin_token_amt: u64 = 60000000u64;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  53 |         let owner_amount: u64 = Mapping::get_or_use(account, caller, 0u64);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  54 |         assert(owner_amount == 0u64);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  55 |         Mapping::set(account, caller, owner_amount + admin_token_amt);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  56 | 
  57 |         Mapping::set(test_token, test_supply, TestToken {
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  58 |             name: 4577111110111112111108121field,
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  59 |             symbol: 4577111110111112111108121field,
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  60 |             decimals: 6u8,
     |             ^^^^^^^^^^^^^^
  61 |             circulating_supply: 0u64 + admin_token_amt,
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  62 |             total_supply: test_supply,
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
  63 |             admin: gs.admin,
     |             ^^^^^^^^^^^^^^^^
  64 |         });
     |         ^^^
  65 |     }
     |     ^
